# fluffycoin

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SKETCHPAD  TODO
cmake/: boost.cmake  cxxflags.cmake  dist.cmake  fluffybin.cmake  fluffylib.cmake  fluffyproto.cmake  fluffyservice.cmake  ozo.cmake  protobuf.cmake  sodium.cmake  zmq.cmake
cmake/patches/: protobuf-abseil-posix.diff  protobuf-abseil-static.diff  protobuf-gcc-warnings.diff  protobuf-uri-prefix.diff
doc/: blockchain.asn1  schema.sql
doc/asn1/: README.md  core.asn1  futures.asn1  loans.asn1  mining.asn1  nft.asn1  stocks.asn1  transfer.asn1  votes.asn1
docker/buildenv/: Dockerfile
docker/cli/: Dockerfile  entrypoint.sh
docker/tests/: Dockerfile
docker/unit-tests/: Dockerfile
docker/validator/: Dockerfile  docker-compose.yml
proto/: CMakeLists.txt
proto/comm/: CMakeLists.txt  Event.proto  EventEnvelope.proto  Request.proto  Response.proto
proto/test/: CMakeLists.txt  SimpleMessage.proto
src/alg/: Address.cpp  Address.h  Base58.cpp  Base58.h  BlockFilename.cpp  BlockFilename.h  CMakeLists.txt  DefaultPaths.h  P2pProtocol.h  PeerAuth.cpp  PeerAuth.h  README  Wallet.cpp  Wallet.h  info.h
src/async/: AlwaysCallback.h  BuriedTreasure.h  CMakeLists.txt  CallbackAwaiter.h  Ret.h  Scheduler.cpp  Scheduler.h  Socket.cpp  Socket.h  TreasureTrove.cpp  TreasureTrove.h  UncontrolledSocket.cpp  UncontrolledSocket.h  WaitOnCallback.h  boost.h  func.h
src/block/: Address.cpp  Address.h  Block.cpp  Block.h  CMakeLists.txt  CredentialChange.cpp  CredentialChange.h  Exchange.cpp  Exchange.h  Genesis.cpp  Genesis.h  Hash.cpp  Hash.h  MineAction.cpp  MineAction.h  Node.cpp  Node.h  PublicKey.cpp  PublicKey.h  README  Reconciliation.cpp  Reconciliation.h  Register.cpp  Register.h  Signature.cpp  Signature.h  Specie.cpp  Specie.h  Time.cpp  Time.h  Transaction.cpp  Transaction.h  Transfer.cpp  Transfer.h  Unregister.cpp  Unregister.h  Validation.cpp  Validation.h  decode.cpp  decode.h  (+2 more)
src/cli/: CMakeLists.txt  genesis.cpp
src/db/: Binary.cpp  Binary.h  CMakeLists.txt  Database.cpp  Database.h  README  Session.cpp  Session.h
src/log/: CMakeLists.txt  Category.cpp  Category.h  Level.cpp  Level.h  Log.cpp  Log.h  LogTime.cpp  LogTime.h  Logger.cpp  Logger.h  README
src/ossl/: CMakeLists.txt  Curve25519.cpp  Curve25519.h  Entropy.cpp  Entropy.h  Error.cpp  Error.h  EvpPkeyPtr.h  Hash.cpp  Hash.h  Initialize.cpp  Initialize.h  PbkdfKey.cpp  PbkdfKey.h  PbkdfKeyEncode.cpp  PbkdfKeyEncode.h  Pkcs8Key.cpp  Pkcs8Key.h  Prng.cpp  Prng.h  README  convert.h  (+4 more)
tests/unit/: CMakeLists.txt
tests/unit/alg/: Address.cpp  Base58.cpp  Wallet.cpp
tests/unit/block/: Genesis.cpp
tests/unit/cmake/: headers.cmake
tests/unit/db/: Database.cpp  Params.cpp  Params.h  Session.cpp
tests/unit/main/: fluffytest.h  main.cpp
tests/unit/ossl/: Curve25519.cpp  PbkdfKey.cpp  PbkdfKeyEncode.cpp  Pkcs8Key.cpp
tests/unit/svc/: ApiPort.cpp  EventProcessor.cpp  EventPublisher.cpp
tests/unit/utils/: AnyMap.cpp  Base64.cpp  BinData.cpp  BinData.h
tests/unit/zmq/: PubSub.cpp  ServerClient.cpp
(+155 files in other folders)
